--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Sign In</title>
-  <link rel="stylesheet" href="./css/style.css">
-  
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Raleway&display=swap" rel="stylesheet">
   <script src="./index.js"></script>
 </head>
 <body>
